correct horizontal scroll

--- a/homework-3/forkio.css
+++ b/homework-3/forkio.css
@@ -485,11 +485,7 @@ max-width: 250px;
 	padding: 40px 0px 30px;
 }
 
-@media (max-width: 480px) {
-	.fork-subscription-all-block{
-		text-align: center;
-	}
-}
+
 .price-block{
 	text-transform: uppercase;
 	flex: 0 0 23%;     /*width: 23%;*/
@@ -504,7 +500,16 @@ max-width: 250px;
 	font-size: 40px;
 	background-color: rgba( 57,34,44, 0.7);
 }
-
+@media (max-width: 1000px) {
+	.price-block {
+		flex: 0 0 20%;
+	}
+}
+@media (max-width: 1000px) {
+	.price-block {
+		flex: 0 0 26%;
+	}
+}
 @media (max-width: 480px) {
 	.price-block {
 		flex: 0 0 70%;
